# graft

./: .ghalint.yaml  .gitignore  .gitleaksignore  .worktreeinclude  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  action.yml  mise.toml
.claude/skills/project-conventions/references/: testing-patterns.md
.devcontainer/: postStartCommand.sh  traefik.sh
.githooks/: post-checkout
.github/: project-config.json
.github/actions/act-actionlint/: action.yaml
.github/actions/act-audit/: action.yaml
.github/actions/act-codeql/: action.yaml
.github/actions/act-docs-ci/: action.yaml
.github/actions/act-prebuild-container/: action.yaml
.github/workflows/: _orchestrator.yaml  cleanup.yaml  miri.yaml  release-manager.yaml  release.yaml  rust-ci.yaml  tagpr.yaml
.mise/: tasks.toml
ast-rules/: _rules.md
crates/graft/: Cargo.toml  build.rs
crates/graft-engine/: Cargo.toml
crates/graft-engine/src/: diff.rs  lib.rs  output.rs  upstream.rs
crates/graft-engine/src/mode/: ci_check.rs  mod.rs  patch_refresh.rs  sync.rs  validate.rs
crates/graft-engine/src/repo/: apply.rs  compare.rs  mod.rs  parse.rs  print.rs  testing.rs  tests.rs
crates/graft-engine/src/strategy/: create_only.rs  delete.rs  markers.rs  mod.rs  patch.rs  replace.rs
crates/graft-engine/tests/: preserve_markers.rs
crates/graft-manifest/: Cargo.toml
crates/graft-manifest/src/: error.rs  lib.rs  manifest.rs  merge.rs  strategy.rs
crates/graft/src/: cli.rs  deps.rs  main.rs
crates/graft/src/denv/: cli.rs  mod.rs
crates/graft/src/denv/traefik/: cli.rs  config.rs  mod.rs  routes.rs  runner.rs
crates/graft/src/discover/: cli.rs  mod.rs
crates/graft/src/init/: cli.rs  generate.rs  mod.rs  schema.rs  select.rs  skill.rs  workflow.rs
crates/graft/src/issue_sync/: cli.rs  mod.rs
crates/graft/src/sync/: cli.rs  detect.rs  diff.rs  error.rs  gh_error.rs  manifest.rs  mod.rs  output.rs  repo.rs  runner.rs  upstream.rs  upstream_manifest.rs
crates/graft/src/sync/mode/: ci_check.rs  mod.rs  patch_refresh.rs  sync.rs  validate.rs
crates/graft/src/sync/strategy/: create_only.rs  delete.rs  mod.rs  patch.rs  replace.rs
crates/graft/tests/: integration_test.rs
crates/graft/tests/fixtures/fake-gh/: gh
crates/graft/tests/fixtures/scenarios/: detect_repo_failure.json  sync_file_ci_check_drift.json  sync_repo_description_drift.json  sync_repo_no_drift.json
docs/specs/: 2026-04-16-api-422-guards-design.md  2026-05-03-distribute-upstream-skill-design.md  template-sync.ja.md
docs/specs/components/: commit-pr-workflow.ja.md  traefik-routing.ja.md  upstream-fetch.ja.md
docs/specs/graft/: cli.ja.md  error-handling.ja.md  manifest-schema.ja.md  output-format.ja.md  overview.ja.md  strategies.ja.md
docs/specs/graft/subcmds/: denv-routes-update.ja.md  discover.ja.md  init.ja.md  sync.ja.md
tests/bats/: statusline-traefik.bats
